k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web
  labels:
    app: go-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web
        image: sirishassss/go-web:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-web
  labels:
    app: go-web
spec:
  ports:
  - port: 80 
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-web
  type: ClusterIP
