k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: go-web.local
      http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: go-web
                port:
                  number: 80
